Fixed margin spacing between main content and bottombar

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -47,7 +47,7 @@ nav {
     background-color: map-get($map: $theme-colors, $key: "light");
     position: absolute;
     left: 0;
-    bottom: -3rem;
+    bottom: 0;
 }
 
 html {
